Ignore creation annotation

--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -26,3 +26,6 @@ spec:
   - kind: Secret
     jsonPointers:
     - /data
+  - kind: Deployment
+    jsonPointers:
+    - '/metadata/annotations/creation'
