--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -28,4 +28,4 @@ spec:
     - /data
   - kind: Deployment
     jsonPointers:
-    - '/metadata/annotations/creation'
+    - /metadata/annotations/creation
