Add group field for kind: Deployment

--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -27,5 +27,6 @@ spec:
     jsonPointers:
     - /data
   - kind: Deployment
+    group: apps
     jsonPointers:
     - /metadata/annotations/creation
